xpra (0.15.1-1) UNRELEASED; urgency=low
  * fix displayfd Xorg version check: require version 1.13
  * fix GUI debug script on OSX
  * fix typo in list of supported X11 atoms
  * fix exit-with-children: support sharing mode
  * fix html option for client only builds
  * fix pulseaudio not killed on exit on Ubuntu
  * blacklist Ubuntu Vivid, which broke Xdummy, again
  * raise maximum clipboard requests per second to 20
  * remove old VP9 performance warnings

 -- Antoine Martin <antoine@nagafix.co.uk>  Fri, 12 Jun 2015 16:20:20 +0200

xpra (0.15.0-2) UNRELEASED; urgency=low
  * rebuild with workarounds for Ubuntu vivid and Debian build paths

 -- Antoine Martin <antoine@nagafix.co.uk>  Tue, 02 Jun 2015 23:05:53 +0700

xpra (0.15.0-1) UNRELEASED; urgency=low
  * printer forwarding
  * functional HTML5 client
  * add session idle timeout switch
  * add html command line switch for easily setting up an HTML5 xpra server
  * dropped support for Python 2.5 and older,
    allowing for many code cleanups and improvements
  * include manual in html format with MS Windows and OSX builds
  * add option to control socket permissions (easier setup of containers)
  * client log output forwarding to the server
  * fixed workarea coordinates detection for MS Windows clients
  * improved video region detection and handling
  * more complete support for window states (keep above, below, sticky, etc..)
    and general window manager responsabilities
  * allow environment variables passed to children to be specified
    in the config files
  * faster reformatting of window pixels before compression stage
  * support multiple delta regions and expire them (better compression)
  * allow new child commands to be started on the fly, also from the client's
    system tray (disabled by default)
  * detect mismatch between some codecs and their shared library dependencies
  * NVENC SDK support for versions 4 and 5, YUV444 and lossless mode