@@ -2,6 +2,7 @@ usr/lib/*/*/xpra
 usr/bin/xpra
 usr/bin/xpra_launcher
 usr/share/applications/xpra_launcher.desktop
+usr/share/mime/packages/application-x-xpraconfig.xml
 usr/share/xpra/icons/*.png
 usr/share/xpra/www/*
 etc/xpra/xorg.conf
